// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DomainFieldsDisplay with empty domain design 1`] = `
<div>
  <div
    class="panel panel-default"
  >
    <div
      class="panel-heading"
    >
      <div
        class="panel-title"
      />
    </div>
    <div
      class="panel-body"
    >
      <p />
      <div
        class="table-responsive"
      >
        <div
          class="grid-messages"
        />
        <table
          class="read-only-table table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                class="grid-header-cell"
                draggable="false"
                id="name"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Name
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="label"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Label
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="rangeURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Range URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="conceptURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Concept URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="required"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Required
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="scale"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Scale
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="grid-empty"
            >
              <td
                colspan="6"
              >
                No data available.
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainFieldsDisplay with title 1`] = `
<div>
  <div
    class="panel panel-default"
  >
    <div
      class="panel-heading"
    >
      <div
        class="panel-title"
      >
        test domain title
      </div>
    </div>
    <div
      class="panel-body"
    >
      <p />
      <div
        class="table-responsive"
      >
        <div
          class="grid-messages"
        />
        <table
          class="read-only-table table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                class="grid-header-cell"
                draggable="false"
                id="name"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Name
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="label"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Label
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="rangeURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Range URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="conceptURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Concept URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="required"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Required
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="scale"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Scale
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="grid-empty"
            >
              <td
                colspan="6"
              >
                No data available.
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainFieldsDisplay without title 1`] = `
<div>
  <div
    class="panel panel-default"
  >
    <div
      class="panel-heading"
    >
      <div
        class="panel-title"
      >
        test domain name
      </div>
    </div>
    <div
      class="panel-body"
    >
      <p />
      <div
        class="table-responsive"
      >
        <div
          class="grid-messages"
        />
        <table
          class="read-only-table table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th
                class="grid-header-cell"
                draggable="false"
                id="name"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Name
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="label"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Label
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="rangeURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Range URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="conceptURI"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Concept URI
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="required"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Required
                </div>
              </th>
              <th
                class="grid-header-cell"
                draggable="false"
                id="scale"
              >
                <div
                  class="grid-header-cell__body"
                >
                  Scale
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="grid-empty"
            >
              <td
                colspan="6"
              >
                No data available.
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
